--- a/src/global.css
+++ b/src/global.css
@@ -4,13 +4,32 @@
     justify-content: center;
 }
 
+/*** Flex Stuff START ***/
+
 .flex-container {
     display: flex;
+}
+
+.direction-col {
+    flex-direction: column;
+}
+
+.flex-col {
+    /* Combines .flex-container and .direction-col */
+    display: flex;
+    flex-direction: column;
 }
 
 .flex-expand-simple {
     flex-grow: 1;
 }
+
+.flex-grow-scroll {
+    height: 0px;
+    overflow-y: auto;
+}
+
+/*** Flex Stuff END ***/
 
 .app-border {
     border: 3px solid #dedede;
@@ -32,3 +51,19 @@
     padding-right: 50px;
     padding-bottom: 50px;
 }
+
+.full-height {
+    height: 100vh;
+} 
+
+/*** PADDING START ***/
+
+.padding-std {
+    padding: 16px;
+}
+
+.padding-sm {
+    padding: 8px;
+}
+
+/*** PADDING START ***/
